# cmake_whole_archive

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cxx11.cmake  http.cc  http.h
application/: CMakeLists.txt  main.cc
